--- a/_posts/examples/2010-12-03-card-02-slide-flip.html
+++ b/_posts/examples/2010-12-03-card-02-slide-flip.html
@@ -1,6 +1,6 @@
 ---
 layout: example
-title: Card 2 - slide flip
+title: Card 2 - slide rotate
 category: examples
 ---
 
@@ -21,10 +21,6 @@ category: examples
       width: 100%;
       height: 100%;
       position: absolute;
-      -webkit-transition: -webkit-transform 1s;
-         -moz-transition: -moz-transform 1s;
-           -o-transition: -o-transform 1s;
-              transition: transform 1s;
       -webkit-transform-style: preserve-3d;
          -moz-transform-style: preserve-3d;
            -o-transform-style: preserve-3d;
@@ -35,13 +31,6 @@ category: examples
               transform-origin: right center;
     }
 
-    #card.flipped {
-      -webkit-transform: translateX( -100% ) rotateY( -180deg );
-         -moz-transform: translateX( -100% ) rotateY( -180deg );
-           -o-transform: translateX( -100% ) rotateY( -180deg );
-              transform: translateX( -100% ) rotateY( -180deg );
-    }
-
     #card figure {
       display: block;
       height: 100%;
@@ -50,8 +39,9 @@ category: examples
       color: white;
       text-align: center;
       font-weight: bold;
-      font-size: 140px;
+      font-size: 4rem;
       position: absolute;
+    
       -webkit-backface-visibility: hidden;
          -moz-backface-visibility: hidden;
            -o-backface-visibility: hidden;
@@ -62,13 +52,6 @@ category: examples
       background: red;
     }
 
-    #card .back {
-      background: blue;
-      -webkit-transform: rotateY( 180deg );
-         -moz-transform: rotateY( 180deg );
-           -o-transform: rotateY( 180deg );
-              transform: rotateY( 180deg );
-    }
   </style>
 
 </head>
@@ -78,14 +61,12 @@ category: examples
 
   <section class="container">
     <div id="card">
-      <figure class="front">1</figure>
-      <figure class="back">2</figure>
+      <figure class="front">foobar</figure>
     </div>
   </section>
 
-  <section id="options">
-    <p><button id="flip">Flip Card</button></p>
-  </section>
+  <script src="../bower_components/greensock/src/uncompressed/TweenMax.js"></script>
+  <script src="../bower_components/greensock/src/uncompressed/utils/Draggable.js"></script>
 
   <script src="../js/utils.js"></script>
   <script src="../js/flip-card.js"></script>
