Trying to reset the position with animation but failing

--- a/_posts/examples/2015-02-05-drag-slide-rotate.html
+++ b/_posts/examples/2015-02-05-drag-slide-rotate.html
@@ -69,4 +69,4 @@ category: examples
   <script src="../bower_components/greensock/src/uncompressed/utils/Draggable.js"></script>
 
   <script src="../js/utils.js"></script>
-  <script src="../js/flip-card.js"></script>
+  <script src="../js/drag-rotate.js"></script>
